# permissionless-voting

./: .gitignore  .gitmodules  Cargo.toml  README.md  ethers.js  package-lock.json  package.json  remappings.txt
.github/workflows/: main.yml
apps/src/: main.rs
contracts/scripts/: Deploy.s.sol
contracts/src/: IVoting.sol  Voting.sol
contracts/test/: Voting.t.sol
guests/: Cargo.toml  build.rs
guests/src/: lib.rs
guests/tests/: voting-tally.rs
guests/vote-types/: Cargo.toml
guests/vote-types/src/: lib.rs
guests/voting-tally/: Cargo.toml
guests/voting-tally/src/: main.rs
