[package]
name = "guests"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
alloy-primitives = { workspace = true }
alloy-sol-types = { workspace = true }
risc0-zkvm = { workspace = true, features = ["client"] }
vote-types = { path = "./vote-types" }

[build-dependencies]
risc0-build = { workspace = true }
risc0-build-ethereum = { workspace = true }

[package.metadata.risc0]
methods = ["voting-tally"]
